added function with a exercise off image.src

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
     font-family: 'Faster One', cursive;
   }
   
-   header styles */
+   /*header styles */
   
   h1 {
     font-size: 4rem;
